2回目　ヘッダー変更

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main>
     <!--ヘッダー!-->
     <header>
-<h2>ホーム</h2>
+<h2>メインヘッダー</h2>
       <div class="search">
         <div class="search-btn">
           <i class="fas fa-search"></i>
