--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <h3>い・ろ・は・す</h3>
 <p class="user-id">@iroha416</p>
 </div>
-<p>私がいない</p>
+<p>先輩たちほんとに仲いいですね！</p>
 <div class="tweet-image" data-image="./image/3期.jpg" data-title="いじめ？"
 data-caption="私がいない">
     <img class="oregairu" src="./image/3期.jpg" alt="ツイート画像">
