--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ data-caption="私がいない">
 </div>
 <div class=timeline-flex>
 <div class="username">
-<h3>尊い</h3>
+<h3>ていとくん</h3>
 <p class="user-id">@teito</p>
 </div>
     <p>
