--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main>
     <!--ヘッダー!-->
     <header>
-<h2>ホーム ホーム</h2>
+<h2>ホーム</h2>
     <div class="search">
         <div class="search-btn">
           <i class="fas fa-search"></i>
@@ -138,7 +138,7 @@
 <h3>い・ろ・は・す</h3>
 <p class="user-id">@iroha416</p>
 </div>
-<p>先輩たちほんとに仲いいですね！</p>
+<p>私がいない</p>
 <div class="tweet-image" data-image="./image/3期.jpg" data-title="いじめ？"
 data-caption="私がいない">
     <img class="oregairu" src="./image/3期.jpg" alt="ツイート画像">
@@ -156,7 +156,7 @@ data-caption="私がいない">
 </div>
 <div class=timeline-flex>
 <div class="username">
-<h3>ていとくん</h3>
+<h3>尊い</h3>
 <p class="user-id">@teito</p>
 </div>
     <p>
