Nさん初コミットい

--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
 </style>
 </head>
 <body>
-ああああああああああああああああ
-あああああああああああああ
-ああああああああああああああああ
-ああああああああああああああああああ
-ああああああああああああああああああ
+ういいいいいいいいいいい
+いいいいいいいいいいい
   <div class="chat-wrapper">
 <div class="chat-container">
   <nav class="side-nav">
