Aさんおおおおお

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 </style>
 </head>
 <body>
-ういいいいいい
-いいいいいいいいいいい
-えええええええええええええ
-ええええええええええええええ
+  おおおおおおおおおおおおおおおおおお
+  おおおおおおおおおおおおおおおお
+  おおおおおおおおおおおおお
+  おおおおおおおお
   <div class="chat-wrapper">
 <div class="chat-container">
   <nav class="side-nav">
