--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="modal-header-fixed">
   <div class="modal-header">
     <button type="submit" class="btn modal-tweet">ツイートする</button>
-    <p>未送信ツイート</p>
+    <p>未送信ツイートだ</p>
     <img src="./image/cross.png" alt="戻る">
     <div class="clear-right"></div>
   </div>
