--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   おおおおおおおおおおおおおおおお
   おおおおおおおおおおおおお
   おおおおおおおお
+  新たなブランチdevelop2で書いた
   <div class="chat-wrapper">
 <div class="chat-container">
   <nav class="side-nav">
