masterでかい他文字

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   おおおおおおおおおおおおおおおお
   おおおおおおおおおおおおお
   おおおおおおおお
+
+
+  masterで書いた文字
   <div class="chat-wrapper">
 <div class="chat-container">
   <nav class="side-nav">
