マージ後develop2で書いた

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
   masterで書いた文字
   新たなブランチdevelop2で書いた
+  マージ後develop2で書いた
   <div class="chat-wrapper">
 <div class="chat-container">
   <nav class="side-nav">
