元に戻した

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 </style>
 </head>
 <body>
-
   <div class="chat-wrapper">
 <div class="chat-container">
   <nav class="side-nav">
@@ -51,7 +50,7 @@
     <!--ヘッダー!-->
     <header>
 <h2>ホーム</h2>
-      <div class="search">
+    <div class="search">
         <div class="search-btn">
           <i class="fas fa-search"></i>
         </div>
@@ -69,7 +68,7 @@
 <div class="modal-header-fixed">
   <div class="modal-header">
     <button type="submit" class="btn modal-tweet">ツイートする</button>
-    <p>未送信ツイート</p>
+    <p>未送信ツイートだっっっっっっっｙ</p>
     <img src="./image/cross.png" alt="戻る">
     <div class="clear-right"></div>
   </div>
